name:                site
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/simonyangme/site#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Yang
maintainer:          lokisnake@gmail.com
copyright:           Copyright © 2015 Simon Yang
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
